--- a/bloco_3/dia_3/style2.css
+++ b/bloco_3/dia_3/style2.css
@@ -15,7 +15,7 @@
 
 .baloon {
   position: absolute;
-  top: 250px;
+  top: 350px;
   left: 400px;
 }
 
@@ -25,4 +25,6 @@
 
 .bowser {
   width: 200px;
+  top: 400px;
+  left: 600px;
 }
