--- a/bloco_3/dia_3/style3.css
+++ b/bloco_3/dia_3/style3.css
@@ -2,9 +2,13 @@ h1, p {
   text-align: center;
 }
 
-li:hover{
+ul:hover, ol:hover{
   background-color: lightcoral;
 }
+
 li:active{
   background: lightseagreen;
+}
+li{
+  list-style: none;
 }
