--- a/bloco_3/dia_4/exercises/introducao-a-html-e-css_4/style.css
+++ b/bloco_3/dia_4/exercises/introducao-a-html-e-css_4/style.css
@@ -6,3 +6,21 @@ header{
 h1{
   font-style: italic;
 }
+li{
+  display: inline-block;
+  width: 200px;
+  font-size: 20px;
+}
+.italico{
+  font-style: italic;
+}
+.fatos{
+  background-color: crimson;
+  text-decoration-line: underline;
+  }
+.reino{
+  background-color: cadetblue;
+}
+.descriçao{
+  font-style: italic;
+}
