--- a/bloco_3/dia_4/exercises/introducao-a-html-e-css_4/style.css
+++ b/bloco_3/dia_4/exercises/introducao-a-html-e-css_4/style.css
@@ -24,3 +24,9 @@ li{
 .descriçao{
   font-style: italic;
 }
+aside{
+  position: absolute;
+  top: 2;
+  right: 0;
+  background-color: deeppink;
+}
